force-app/main/default/objects/Deployment_Component__c/Deployment_Component__c.object-meta.xml
<CustomObject>
    <label>Deployment_Component</label>
    <nameField>
        <label>Deployment_Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment_Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>