force-app/main/default/objects/Deployment_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Custom Field</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>