force-app/main/default/objects/Deployment_Component__c/fields/Deployment_Request__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Request__c</fullName>
    <label>Deployment Request</label>
    <referenceTo>Deployment_Request__c</referenceTo>
    <relationshipLabel>Deployment_Component</relationshipLabel>
    <relationshipName>Deployment_Component</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>