force-app/main/default/objects/Deployment_Component__c/fields/Parent_Component__c.field-meta.xml
<CustomField>
    <fullName>Parent_Component__c</fullName>
    <label>Parent Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>